# Shaders

./: CMakeLists.txt  README.md
src/: Camera.h  Color.h  Face.h  Fragment.h  Matrices.h  ObjLoader.cpp  ObjLoader.h  Shaders.h  Uniforms.h  Vertex.h  camera.h  fragment.h  framebuffer.h  gl.h  loadObject.h  main.cpp  noise.h  print.h  shaders.h  triangle.h
